# cpp-vscode-cmake-template

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/test/: placeholder.test.cpp
